--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Auteur</title>
         <link href="css/style.css" rel="stylesheet"/>
         <link href="css/fonts.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -15,7 +15,7 @@
                 href="https://fonts.googleapis.com/css2?family=Jost:wght@300&family=Montserrat:wght@300&family=Poppins:wght@100&display=swap"
                 rel="stylesheet">
             <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet">
-            <link rel="shortcut icon" type="image/png" href="/media/images/favicon.png"/>
+            <link rel="icon" type="image/x-icon" href="media/images/favicon.png">
     </head>
     <body>
         <div id="body_bg"></div>
