--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Auteur</title>
         <link href="css/style.css" rel="stylesheet"/>
         <link href="css/fonts.css" rel="stylesheet"/>
+        <link href="css/custom-elements.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,7 +56,7 @@
             <div class="forms">
 
                 <div class="forms-container">
-                    <form style="display: flex;" action="process.php" method="post">
+                    <form style="display: flex;" action="process.php" method="post" id="login-form">
                         <div class="form-input">
                             <div>
                                 <label class="text-muted" for="email">Email</label>
@@ -74,9 +75,9 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" name="login">Login</button>
+                        <!-- <button type="submit" name="login">Login</button> -->
                     </form>
-                    <form style="display: none;" action="process.php" method="post">
+                    <form style="display: none;" action="process.php" method="post" id="register-form">
                         <div class="form-input">
                             <div>
                                 <label class="text-muted" for="name">Name</label>
@@ -127,7 +128,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" name="register">Register</button>
+                        <!-- <button type="submit" name="register">Register</button> -->
                     </form>
                 </div>
             </div>
@@ -135,5 +136,6 @@
 
     </body>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script src="scripts/custom-elements-script.js"></script>
     <script src="scripts/script.js"></script>
 </html>
