Update Article functionality added; added custom input element

--- a/index.html
+++ b/index.html
@@ -61,17 +61,17 @@
                             <div>
                                 <label class="text-muted" for="email">Email</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>
+                                    <i class="lni lni-chevron-left custom-input-i"></i>
                                     <input type="text" id="email" name="email"/>
-                                    <i class="lni lni-chevron-right"></i>
+                                    <i class="lni lni-chevron-right custom-input-i"></i>
                                 </div>
                             </div>
                             <div>
                                 <label class="text-muted" for="password">Password</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>
+                                    <i class="lni lni-chevron-left custom-input-i"></i>
                                     <input type="password" id="password" name="password"/>
-                                    <i class="lni lni-chevron-right"></i>
+                                    <i class="lni lni-chevron-right custom-input-i"></i>
                                 </div>
                             </div>
                         </div>
@@ -82,49 +82,49 @@
                             <div>
                                 <label class="text-muted" for="name">Name</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>
+                                    <i class="lni lni-chevron-left custom-input-i"></i>
                                     <input type="text" id="name" name="name"/>
-                                    <i class="lni lni-chevron-right"></i>
+                                    <i class="lni lni-chevron-right custom-input-i"></i>
                                 </div>
                             </div>
                             <div>
                                 <label class="text-muted" for="surname">Surname</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>   
+                                    <i class="lni lni-chevron-left custom-input-i"></i>   
                                     <input type="text" id="surname" name="surname"/>
-                                    <i class="lni lni-chevron-right"></i>
+                                    <i class="lni lni-chevron-right custom-input-i"></i>
                                 </div>
                             </div>
                             <div>
                                 <label class="text-muted" for="dob">Date of Birth</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>
+                                    <i class="lni lni-chevron-left custom-input-i"></i>
                                     <input type="date" id="dob" name="dob"/>
-                                    <i class="lni lni-chevron-right"></i>
+                                    <i class="lni lni-chevron-right custom-input-i"></i>
                                 </div>
                             </div>
                             <div>
                                 <label class="text-muted" for="email">Email</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>                                    
+                                    <i class="lni lni-chevron-left custom-input-i"></i>                                    
                                     <input type="email" id="email" name="email"/>
-                                    <i class="lni lni-chevron-right"></i>                                    
+                                    <i class="lni lni-chevron-right custom-input-i"></i>                                    
                                 </div>
                             </div>
                             <div>
                                 <label class="text-muted" for="password">Password</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>                                    
+                                    <i class="lni lni-chevron-left custom-input-i"></i>                                    
                                     <input type="password" id="password" name="password"/>
-                                    <i class="lni lni-chevron-right"></i>                                    
+                                    <i class="lni lni-chevron-right custom-input-i"></i>                                    
                                 </div>
                             </div>
                             <div>
                                 <label class="text-muted" for="repeatPassword">Repeat Password</label>
                                 <div class="input-container">
-                                    <i class="lni lni-chevron-left"></i>
+                                    <i class="lni lni-chevron-left custom-input-i"></i>
                                     <input type="password" id="repeatPassword" name="repeatPassword"/>
-                                    <i class="lni lni-chevron-right"></i>
+                                    <i class="lni lni-chevron-right custom-input-i"></i>
                                 </div>
                             </div>
                         </div>
